force-app/main/default/objects/Asset/fields/Allocation_Required__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Required__c</fullName>
    <label>Allocation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>