force-app/main/default/objects/Asset/fields/Asset_Location__c.field-meta.xml
<CustomField>
    <fullName>Asset_Location__c</fullName>
    <label>Asset Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>