force-app/main/default/objects/Asset/fields/BuildingFomrula__c.field-meta.xml
<CustomField>
    <fullName>BuildingFomrula__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Service_Order__r.Opportunity.Building__c , Service_Order__r.Opportunity.Building__r.Name  , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building</label>
    <type>Text</type>
</CustomField>