force-app/main/default/objects/Asset/fields/Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Data_Hall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Hall</label>
    <referenceTo>DC_Data_Hall__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>