force-app/main/default/objects/Asset/fields/DX_Allocated__c.field-meta.xml
<CustomField>
    <fullName>DX_Allocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allocated</label>
    <type>Checkbox</type>
</CustomField>