force-app/main/default/objects/Asset/fields/DX_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>DX_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>