force-app/main/default/objects/Asset/fields/Lease_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_ID__c</fullName>
    <label>Lease ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>