force-app/main/default/objects/Asset/fields/MRI_Suite_ID__c.field-meta.xml
<CustomField>
    <fullName>MRI_Suite_ID__c</fullName>
    <label>MRI Suite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>