force-app/main/default/objects/Asset/fields/Power_Model_Validation__c.field-meta.xml
<CustomField>
    <fullName>Power_Model_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the first step of the allocation process was taken for Power Assets or if it was not needed. Some Power Models require an additional manual input during this process, and this determines if that manual step was already taken or not.</description>
    <label>Power Model Validation</label>
    <type>Checkbox</type>
</CustomField>