force-app/main/default/objects/Asset/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Order</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>