force-app/main/default/objects/Asset/fields/Service_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Service Order</description>
    <label>Service Order Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>