force-app/main/default/objects/Asset/recordTypes/Cabinet.recordType-meta.xml
<RecordType>
    <fullName>Cabinet</fullName>
    <active>true</active>
    <description>Cabinet in a data hall.</description>
    <label>Cabinet</label>
</RecordType>