force-app/main/default/objects/Asset/recordTypes/Cage.recordType-meta.xml
<RecordType>
    <fullName>Cage</fullName>
    <active>true</active>
    <description>Private Cage in a data hall.</description>
    <label>Cage</label>
</RecordType>