force-app/main/default/objects/Asset/recordTypes/Cross_Connect.recordType-meta.xml
<RecordType>
    <fullName>Cross_Connect</fullName>
    <active>true</active>
    <description>A connection between Rack Units in the Meet Me Room.</description>
    <label>Cross Connect</label>
</RecordType>