force-app/main/default/objects/Asset/recordTypes/Home_Runs.recordType-meta.xml
<RecordType>
    <fullName>Home_Runs</fullName>
    <active>true</active>
    <description>Fiber bundle from the data hall to the Meet Me Room.</description>
    <label>Home Runs</label>
</RecordType>