force-app/main/default/objects/Asset/recordTypes/Meet_Me_Room_Rack.recordType-meta.xml
<RecordType>
    <fullName>Meet_Me_Room_Rack</fullName>
    <active>true</active>
    <description>A Netrality owned rack in the Meet Me Area to be filled with customer panels for cross connects.</description>
    <label>Meet Me Area Rack</label>
</RecordType>