force-app/main/default/objects/Asset/recordTypes/Power_Circuit.recordType-meta.xml
<RecordType>
    <fullName>Power_Circuit</fullName>
    <active>true</active>
    <description>Providing power to customer cabinet/cage.</description>
    <label>Power Circuit</label>
</RecordType>