force-app/main/default/objects/Asset/recordTypes/Rack_Unit.recordType-meta.xml
<RecordType>
    <fullName>Rack_Unit</fullName>
    <active>true</active>
    <description>Rack Unit in the Meet Me Room.</description>
    <label>Rack Unit</label>
</RecordType>